--- a/AnındaKapında.MVC/Views/Shared/_Layout.cshtml
+++ b/AnındaKapında.MVC/Views/Shared/_Layout.cshtml
@@ -47,8 +47,8 @@
 
             </ul>
             <div style="margin-left:1200px">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
-                <button class="btn btn-outline-success" style="margin: 10px;" type="submit">Login</button>
+                <a class="btn btn-outline-info" href="/Customer/Register/" >Sign Up</a>
+                <a class="btn btn-outline-success" style="margin: 10px;" >Login</a>
             </div>
         </div>
     </div>
