--- a/AnındaKapında.MVC/Views/Shared/_AdminLayout.cshtml
+++ b/AnındaKapında.MVC/Views/Shared/_AdminLayout.cshtml
@@ -131,27 +131,44 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-menu-button-wide"></i><span>See All</span><i class="bi bi-chevron-down ms-auto"></i>
+                    <i class="bi bi-menu-button-wide"></i><span>Products - Order</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="components-alerts.html">
+                        <a href="/Categories">
                             <i class="bi bi-circle"></i><span>Categories</span>
                         </a>
                     </li>
                     <li>
-                        <a href="components-accordion.html">
+                        <a href="/Products/Table">
                             <i class="bi bi-circle"></i><span>Products</span>
                         </a>
                     </li>
                     <li>
-                        <a href="components-badges.html">
+                        <a href="/Orders">
                             <i class="bi bi-circle"></i><span>Orders</span>
                         </a>
                     </li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#components-nav1" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-menu-button-wide"></i><span>Users</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="components-nav1" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="components-breadcrumbs.html">
-                            <i class="bi bi-circle"></i><span>Users</span>
+                        <a href="/Worker/CargoOfficers">
+                            <i class="bi bi-circle"></i><span>Cargo Officers</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/Worker/SupplyOfficers">
+                            <i class="bi bi-circle"></i><span>Supply Officer</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/Customers">
+                            <i class="bi bi-circle"></i><span>Customers</span>
                         </a>
                     </li>
                 </ul>
